Added Platform.io manifest and framework package tar.
Added Platform.io manifest and framework package tar.

--- a/Platform.io/src/platformio.ini
+++ b/Platform.io/src/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:teensy31]
-platform = teensy_mod
+platform = https://github.com/TheNetStriker/platform-teensy#SingleWireSerialMod
 board = teensy31
 framework = arduino
 
