Platform.io 5.0: Issue with package fixed.

--- a/Platform.io/src/platformio.ini
+++ b/Platform.io/src/platformio.ini
@@ -12,6 +12,7 @@
 platform = https://github.com/TheNetStriker/platform-teensy#SingleWireSerialMod
 board = teensy31
 framework = arduino
+platform_packages = framework-arduinoteensy-single-wire-mod @ https://raw.githubusercontent.com/TheNetStriker/JollyMecApi/master/Platform.io/framework-arduinoteensy-single_wire-mod-1.145.0.tar.gz
 
 monitor_speed = 19200
 
